--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 # Project
-.github
 xyzopt
-reference
-mkdocs.yml
 
 # Env vars
+.env
 .env.local
+.env.*
 !.env.example
 
 # IDE Cache
@@ -13,16 +12,38 @@ mkdocs.yml
 .cursor/
 .cursorignore
 .jupyter/
+.idea/
 
 # Python
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+.Python
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+*.cover
+.hypothesis/
 
 # Packaging
 dist/
 build/
 *.egg-info/
 *.egg
+wheels/
 
 # MkDocs
 site/
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~
+
+# OS
+.DS_Store
+Thumbs.db
