add env / api key checking

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# Package Configuration
+# Set to 1, true, or yes to see available capabilities on import
+FIGWIZZ_VERBOSE=
+
 # Image Download APIs
 PIXABAY_API_KEY=
 
